# 3DFacade

./: README.md
data/streetside/: cameras.txt  finalmesh.ply  images.txt  reconstructed.ply
data/twofaces/: cameras.txt  faces2.ply  reconstructed.ply
model/: initialization.ply  output.ply  reconstructed.ply  reconstructed0.ply
objectdetection/CMPdataset/test/: cmp_b0292.xml  cmp_b0293.xml  cmp_b0294.xml  cmp_b0295.xml  cmp_b0296.xml  cmp_b0297.xml  cmp_b0298.xml  cmp_b0299.xml  cmp_b0300.xml  cmp_b0301.xml  cmp_b0302.xml  cmp_b0303.xml  cmp_b0304.xml  cmp_b0305.xml  cmp_b0306.xml  cmp_b0307.xml  cmp_b0308.xml  cmp_b0309.xml  cmp_b0310.xml  cmp_b0311.xml  cmp_b0312.xml  cmp_b0313.xml  cmp_b0314.xml  cmp_b0315.xml  cmp_b0316.xml  cmp_b0317.xml  cmp_b0318.xml  cmp_b0319.xml  cmp_b0321.xml  cmp_b0322.xml
objectdetection/CMPdataset/test2/: cmp_x0027.xml  cmp_x0037.xml  cmp_x0058.xml  cmp_x0063.xml  (+8 more)
objectdetection/pre_txt/: 20220324_151820.txt  20220324_151956.txt  20220416_143757.txt
objectdetection/predictions/: 20220324_151820.json  20220324_151956.json  20220416_143757.json
objectdetection/src/: config.py  convert2torchscript.py  datasets.py  engine.py  inference.py  model.py  utils.py
rectified/: 20220324_151820.yml  20220324_151820_cameraparam.yml  20220324_151956.yml  20220324_151956_cameraparam.yml  20220324_152001_cameraparam.yml  20220416_143757.yml  20220416_143757_cameraparam.yml  imagelist.txt
src/: CMakeLists.txt  FindGUROBI.cmake  facadeModeling.cpp  facadeModeling.h  main.cpp  reconstruction.cpp  reconstruction.h  utils.cpp  utils.h
(+384 files in other folders)
